EdgeMusicSync/kubernetes/central-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-server-service
spec:
  selector:
    app: centralserver
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  topologyKeys:
    - "topology.kubernetes.io/region"
    - "*"
