EdgeMusicSync/kubernetes/edge-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-server-service
spec:
  selector:
    app: edgeserver
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  topologyKeys:
    - "topology.kubernetes.io/zone"
    - "*"
