EdgeMusicSync/kubernetes/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-edgeserver
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: edgeserver
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: edgeserver

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-edgeserver-to-centralserver
spec:
  podSelector:
    matchLabels:
      app: edgeserver
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: centralserver
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: centralserver
